--- a/eas_style.css
+++ b/eas_style.css
@@ -1,17 +1,50 @@
-.mainContainer {
+.header {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 10px;
+    width: 90vh;
+}
+.gridBtn {
+    min-height: 20px;
+    min-width: 20px;
+    max-height: 20px;
+    border-radius: 5px;
+}
+
+.grid {
     display: flex;
     flex-wrap: wrap;
     background-color: bisque;
-    height: 600px;
-    width: 600px;
+    padding: 30px;
+    height: 90vh;
+    width: 90vh;
+}
+
+.row {
+    display: flex;
+    flex: 1 0 auto;
+    width: 80vh;
+    flex-flow: row;
 }
 
 .pxl {
     display: flex;
+    flex: 1 0 auto;
     border: 1px solid black;
     background-color: azure;
     min-height: 5px;
     min-width: 5px;
-    height: 5px;
-    width: 5px;
+
 }
+
+.pxlOn {
+    display: flex;
+    flex: 1 0 auto;
+
+    border: 1px solid black;
+    background-color: rgb(0, 155, 155);
+    min-height: 5px;
+    min-width: 5px;
+}
+
